<resources>
    <string name="login_use_fingerprint_to_authenticate_key">use_fingerprint_to_authenticate_key</string>
    <string name="login_fingerprint_description">Confirm fingerprint to continue</string>
    <string name="login_fingerprint_hint_text">Touch sensor</string>
    <string name="login_description_fingerprint_icon">Fingerprint icon</string>
    <string name="login_fingerprint_not_recognized_text">Fingerprint not recognized. Try again</string>
    <string name="login_fingerprint_success_text">Fingerprint recognized</string>
    <string name="regist_error_invalid_dob">Invalid Date of Birth</string>
    <string name="my_vitals_header">Vitals</string>
    <string name="my_vitals_update">Update</string>
    <string name="about_software_version">Software Version</string>
    <string name="about_language">Default Language</string>
    <string name="about_english">English</string>
    <string name="about_chinese">Chinese</string>
    <string name="about_select_lang">Please select language: </string>
    <string name="about_cancel">Cancel</string>
    <string name="about_state">Default State</string>
    <string name="about_pharmacy">Pharmacy Mode</string>
    <string name="about_pharmacy_activate">Click to enter code</string>
    <string name="signup_fail_heading">Account not created!</string>
    <string name="tablet_main_no_providers">Currently no providers are available. Please call back in a few minutes.</string>
    <string name="bit_rate_value_with_unit">%d kbps</string>
    <string name="frame_rate_value_with_unit">%d fps</string>
    <string name="about_activity">About</string>
    <string name="input_error">Input Invalid</string>
    <string name="title_activity_maps">Map</string>
    <string name="note">Prompt</string>
    <string name="resend_email">Resend Email</string>
    <string name="i_know">OK</string>
    <string name="password">Password</string>
    <string name="try_again">Try Again</string>
    <string name="click_for_login">Click To Login</string>
    <string name="delete_fail_try_again_later">Delete the date failed, try it later</string>
    <string name="location_fail">Locate failed!\nCould not get the surrounding pharmacy.</string>
    <string name="sure">OK</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="current_online_providers">Current Online Providers:</string>
    <string name="enter_password_to_access_account_information">Enter password to access account information</string>
    <string name="dialog_enter">Enter</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="tablet_version_number">Version Number:</string>
    <string name="iot_stemoscope">Stemoscope</string>
    <string name="iot_glucometer">Glucometer</string>
    <string name="iot_scale">Weight Scale</string>
    <string name="iot_blood_pressure">Blood Pressure</string>
    <string name="iot_pulse_oximeter">Pulse Oximeter</string>
    <string name="iot_unknown_device">Unknown Device</string>
    <string name="iot_glucose_instruction">Insert glucose test strip</string>
    <string name="iot_searching">Searching For Device</string>
    <string name="iot_connecting">Connecting to device...</string>
    <string name="iot_scale_instruction">Step On Scale</string>
    <string name="iot_oximeter_instruction">Place your finger in the pulse oximeter and press on power button</string>
    <string name="iot_reading_data">Connected, reading data</string>
    <string name="iot_BP_title">Blood Pressure Monitor</string>
    <string name="iot_measuring_wait">Measuring Please Wait</string>
    <string name="iot_just_dash">-----</string>
    <string name="iot_remove_oximeter">Remove the pulse oximeter to view results</string>
    <string name="iot_cannot_find_device">Cannot find device. Please try again!</string>
    <string name="iot_try_again">Try Again!</string>
    <string name="iot_place_lancet_in_lancer">1. Place lancet in lancer and prick finger</string>
    <string name="iot_blood_on_strip">2. Place blood on strip</string>
    <string name="iot_glucose">Glucose:</string>
    <string name="iot_done">Done</string>
    <string name="iot_quit">Quit</string>
    <string name="iot_stop">Stop</string>
    <string name="iot_start">Start</string>
    <string name="iot_lb">lb</string>
    <string name="iot_glucometer_setup_power">Turn on your glucometer</string>
    <string name="iot_glucometer_setup_power_msg">Make sure your glucometer is fully charged</string>
    <string name="iot_continue">Continue</string>
    <string name="iot_glucometer_pair_title">Pair and connect device</string>
    <string name="iot_glucometer_pairing">Go to your Phone Settings, then select the device titled BG5XXXXXX to pair</string>
    <string name="iot_glucometer_settings">Go to Phone Settings</string>
    <string name="iot_scale_setup_title">Turn on your scale</string>
    <string name="iot_scale_instructions">Install batteries and tap on scale</string>
    <string name="iot_scale_bluetooth_pair">Go to your Phone Settings, then select the device titled iHealth HS4SXXXX to pair</string>
    <string name="BG1_Plug_In">Plug in glucometer to your phone</string>
    <string name="BG1_Insert_Strip">Insert glucose test strip</string>
    <string name="agreement">I agree the terms and conditions.</string>
    <string name="rpm_add_new_device">Add New Device</string>
    <string name="rpm_pressure_title">Pressure</string>
    <string name="rpm_bp_measurement_dash">--</string>
    <string name="rpm_bp_measuring_text">Measuring ...</string>
    <string name="rpm_bp_connected_text">Connected</string>
    <string name="rpm_charged_device_msg">Please make sure your device is charged</string>
    <string name="data_connection_unstable_titile">Cannot find a stable data connection</string>
    <string name="data_connection_unstable_msg">Please check your wifi/data connection</string>
    <string name="connection_error_title">Connection Error</string>
    <string name="connection_error_msg">Problem connecting to CDOC servers, please check your firewall settings</string>
    <string name="force_update_title">Update</string>
    <string name="force_update_msg">Please download the new version from the Google Playstore</string>
    <string name="login_forgot">Forgot Password?</string>
    <string name="view_provider_profile">Would you like to view %s\'s profile?</string>
    <string name="verifying_process">Verifying credentials. Please wait...</string>
    <string name="login_failed">Login failed!</string>
    <string name="login_confirm_title">Confirm Password Reset?</string>
    <string name="login_confirm_message">A new password will be sent to the contact e-mail associated with </string>
    <string name="login_password_reset">The password reset has been sent to your email</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_back">Back</string>
    <string name="btn_done">Done</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_decline">Decline</string>
    <string name="btn_change">Change</string>
    <string name="btn_join">Join</string>
    <string name="TeleHealth_Mode">TeleHealth</string>
    <string name="Remote_Monitoring_Mode">Remote Monitoring</string>
    <string name="account_service_code">Clinic code</string>
    <string name="regist_rm_empty_service_code">Are you affiliated with any doctors?</string>
    <string name="signup_fail_service_code">Please obtain a correct clinic code from your doctor\'s office.</string>
    <string name="regist_basic_label">Basic Information</string>
    <string name="regist_username_text">Email</string>
    <string name="regist_confirm_password">Confirm password</string>
    <string name="regist_enter_password">Password- Min 5 characters</string>
    <string name="regist_error_confirm_password">Please confirm password</string>
    <string name="regist_phone">Phone</string>
    <string name="regist_error_email">Invalid email address</string>
    <string name="regist_error_password">Please enter the password</string>
    <string name="regist_error_password_short">Password must be longer than 4 characters</string>
    <string name="regist_error_confirm_password_match">Password does not match</string>
    <string name="regist_error_phone">Please verify mobile phone number</string>
    <string name="signup_fail_paragraph">The email you entered is already registered. Please enter another email.</string>
    <string name="account_information_heading">Account Information</string>
    <string name="regist_firstname">First Name</string>
    <string name="regist_lastname">Last Name</string>
    <string name="regist_dob_hint">Date of birth (MM/DD/YYYY)</string>
    <string name="regist_male">Male</string>
    <string name="regist_female">Female</string>
    <string name="regist_successful_message">Thank you for registering! You may login with your account.</string>
    <string name="account_information_change_password">Change Password</string>
    <string name="account_information_prev_password">Current Password</string>
    <string name="account_information_new_password">New Password</string>
    <string name="account_information_confirm_password">Confirm Password</string>
    <string name="vitals_busy_dialog">(Optional) Message to Provider</string>
    <string name="consultation_busy_title">Provider is unavailable</string>
    <string name="consultation_busy_msg">Do you want to be in the waiting room for the provider to call you back? If you click "NO" the transaction will be void and session will be terminated. You will not be charged.</string>
    <string name="what_is_">Ans. Blood pressure is the force of your blood pushing against the walls of your arteries. Each time your heart beats, it pumps blood into the arteries. Your blood pressure is highest when your heart beats, pumping the blood. This is called systolic pressure. When your heart is at rest, between beats, your blood pressure falls. This is called diastolic pressure. Blood pressure range varies to different age. </string>
    <string name="what_value_mean">Ans. Your blood pressure reading uses these two numbers. Usually the systolic number comes before or above the diastolic number. For example, 120/80 means a systolic of 120 and a diastolic of 80.</string>
    <string name="how_to_improve">Ans: Treatments for high blood pressure include heart-healthy lifestyle changes and medicines. You will work with your provider to come up with a treatment plan. It may include only the lifestyle changes. These changes, such as heart-healthy eating and exercise, can be very effective. But sometimes the changes do not control or lower your high blood pressure. Then you may need to take medicine. There are different types of blood pressure medicines. Some people need to take more than one type.</string>
    <string name="please_enter_the_password_if_you_are_from_cdoc_support">Please enter the password if you are from CDOC Support?</string>
    <string name="enter_password">Enter Password</string>
    <string name="okay">Okay</string>
    <string name="save_password">Save password</string>
    <string name="change_clinic_code">Change clinic code</string>
    <string name="current_clinic_code">Current clinic code:</string>
    <string name="remove">Remove</string>
    <string name="enter_new_clinic_code">Enter new clinic code</string>
    <string name="cdoc">CDOC</string>
    <string name="what_is_normal_blood_presure">What is normal Blood Pressure?</string>
    <string name="what_my_value_means">What my value means?</string>
    <string name="how_to_improve_it">How to improve it?</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="choose_image">Choose Image</string>
</resources>