<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dimen_10dp">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textSize="@dimen/font_size_14"
    android:layout_margin="@dimen/dimen_15dp"
    android:text="@string/please_enter_the_password_if_you_are_from_cdoc_support"/>
    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_15dp"
        android:hint="@string/enter_password"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:gravity="center">
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_ok"
            android:layout_marginEnd="@dimen/dimen_15dp"
            android:background="@drawable/bg_dark_grey"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_logout"
            android:layout_marginStart="@dimen/dimen_15dp"
            android:textColor="@color/white_0_2"
            android:text="@string/cancel"/>
    </LinearLayout>

</LinearLayout>