<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_dialog_layout_design_user_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultation_busy_title"
        android:textSize="18sp"
        android:textColor="@color/black_2_1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultation_busy_msg"
        android:textSize="15sp"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/userInputDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vitals_busy_dialog"
        android:inputType="text"
        android:textSize="15sp"/>
</LinearLayout>