<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/circle_white"
              android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/note"
        android:textColor="@color/blue_0_1"
        android:textSize="18dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_0_1"/>

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/regist_successful_message"
        android:textColor="@color/gray_2_5"
        android:textSize="17dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_0_1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_dialog_register_note_resend_email"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_dialog_left"
            android:text="@string/resend_email"
            android:textColor="@color/blue_0_1"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/gray_0_1"/>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_dialog_right"
            android:text="@string/i_know"
            android:textColor="@color/blue_0_1"/>
    </LinearLayout>


</LinearLayout>