<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_260sdp"
    android:padding="@dimen/_18sdp">

    <ImageView
        android:id="@+id/closeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_close_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/account_information_change_password"
        android:textColor="@color/dark_slate_blue"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/prevPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/account_information_prev_password"
        android:paddingStart="@dimen/_3sdp"
        android:paddingEnd="@dimen/_2sdp"
        android:paddingBottom="@dimen/_14sdp"
        android:textColor="@color/color_6896ae"
        android:textColorHint="@color/color_6896ae"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/account_information_new_password"
        android:paddingStart="@dimen/_3sdp"
        android:paddingEnd="@dimen/_2sdp"
        android:paddingBottom="@dimen/_14sdp"
        android:textColor="@color/color_6896ae"
        android:textColorHint="@color/color_6896ae"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prevPassword" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/account_information_confirm_password"
        android:paddingStart="@dimen/_3sdp"
        android:paddingEnd="@dimen/_2sdp"
        android:paddingBottom="@dimen/_14sdp"
        android:textColor="@color/color_6896ae"
        android:textColorHint="@color/color_6896ae"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPassword" />

    <Button
        android:id="@+id/save_password_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_26sdp"
        android:background="@drawable/bg_outline_blue"
        android:backgroundTint="@color/azure"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/save_password"
        android:textAllCaps="false"
        android:textColor="@color/white_0_2"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel_btn"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_26sdp"
        android:background="@drawable/bg_outline_blue"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/azure"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toStartOf="@id/save_password_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>