<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_14sdp"
    app:cardCornerRadius="@dimen/_5sdp">

    <RelativeLayout
        android:id="@+id/custom_dialog_layout_design_user_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/roboto_medium"
            android:textStyle="normal"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/dark_slate_blue"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/change_clinic_code"/>

        <ImageView
            android:id="@+id/close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/img_close_icon" />
        <TextView
            android:id="@+id/current_clinic_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:text="@string/current_clinic_code"
            android:fontFamily="@font/roboto_regular"
            android:textStyle="normal"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/color_4f4f4f"/>

        <TextView
            android:id="@+id/serviceCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_toEndOf="@id/current_clinic_code"
            android:paddingStart="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:text="@string/cdoc"
            android:textAllCaps="true"
            android:fontFamily="@font/roboto_regular"
            android:textStyle="normal"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/color_4f4f4f"
            />
        <TextView
            android:id="@+id/tv_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:text="@string/remove"
            android:fontFamily="@font/roboto_medium"
            android:textStyle="normal"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/azure"/>

        <EditText
            android:id="@+id/newServiceCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/enter_new_clinic_code"
            android:textColor="@color/dark_slate_blue"
            android:textColorHint="@color/color_6896ae"
            android:textSize="@dimen/_10sdp"
            android:backgroundTint="@color/color_8f8f8f"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:paddingStart="@dimen/_7sdp"
            android:paddingBottom="@dimen/_12sdp"
            android:layout_below="@id/current_clinic_code"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:orientation="horizontal"
            android:layout_below="@id/newServiceCode">
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_weight="0.5"
                android:background="@drawable/bg_outline_blue"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/azure"
                android:textSize="@dimen/_10sdp"
                android:textStyle="normal"
                />
            <Button
                android:id="@+id/btn_Okay"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="0.5"
                android:background="@drawable/bg_login_btn_selector"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/okay"
                android:textAllCaps="false"
                android:textColor="@color/white_0_2"
                android:textSize="@dimen/_10sdp"
                android:textStyle="normal"
         />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>