<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_5sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imgclose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_close_icon"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_12sdp"
            android:padding="@dimen/_5sdp"
            android:layout_gravity="end"/>

        <TextView
            android:id="@+id/txtlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_18sdp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/choose_image"
            android:textColor="@color/dark_slate_blue"
            android:textSize="@dimen/_12sdp" />
        <Button
            android:id="@+id/btn_camera"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:text="@string/camera"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:textAllCaps="false"
            android:layout_below="@+id/txtlabel"
            android:textSize="@dimen/_10sdp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/azure"
            android:background="@drawable/bg_outline_blue"
            />

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/btn_camera"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:background="@drawable/bg_outline_blue"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/gallery"
            android:textAllCaps="false"
            android:textColor="@color/azure"
            android:textSize="@dimen/_10sdp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
